log-writer.yaml
apiVersion: v1
kind: Pod
metadata:
  name: log-writer-pod
  labels:
    app: log-writer
spec:
  containers:
    - name: log-writer-container
      image: busybox
      command: ["sh", "-c", "while true; do echo $(date) \"Hello from OmerCo!\" >> /var/log/omerco/log.txt; sleep 5; done"]
      volumeMounts:
        - name: log-volume
          mountPath: /var/log/omerco
  volumes:
    - name: log-volume
      hostPath:
        path: /var/log/omerco
        type: DirectoryOrCreate
