networkpolicies.yaml
#Test komutlari: nc -zv -w 3 database-service 80

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-pol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 80
